<resources>
    <!--  Application name  -->
    <string name="app_name" translatable="false">ENotes</string>

    <!--  Text field  hint  -->
    <string name="text_field_hint_key">Key</string>
    <string name="text_field_hint_write_title">Title</string>
    <string name="text_field_write_body">Type something…</string>
    <string name="text_field_hint_search_note">Search your notes</string>

    <!--  Button text  -->
    <string name="button_text_import_key">Import Key</string>
    <string name="button_text_generate_key">Generate Key</string>
    <string name="button_text_export_key">Export Key</string>

    <!--  Message success and error  -->
    <!--  Success  -->
    <string name="message_success_export_key">Export key success</string>
    <!--  Error  -->
    <string name="message_error_all_white_space">
        The key that you wrote down is all white space,\n it\'s not allowed.
    </string>
    <string name="message_error_no_note">You have no note!</string>
    <string name="message_error_no_note_pin">You have no pin note!</string>
    <string name="message_error_encryption_note">Encryption Note</string>
    <string name="message_error_no_encryption_note">You have no encryption note!</string>
    <string name="message_error_no_data">No data</string>
    <string name="message_error_no_body">Content cannot be empty</string>
    <string name="message_error_import_key">Key Wrong</string>

    <!--  Snackbar message  -->
    <string name="snackbar_message_note_saved">Note edited</string>
    <string name="snackbar_message_note_added">Note added</string>
    <string name="snackbar_message_deleted_note">Note was deleted</string>
    <string name="snackbar_message_edit_note">Edit Note</string>
    <string name="snackbar_message_note_discarded">Empty note discarded</string>
    <string name="snackbar_message_loading_note_error">Error while loading note</string>

    <!--  Dialog title and message  -->
    <string name="dialog_title_delete_note">Delete Note?</string>
    <string name="dialog_message_delete_note">The note will be permanently deleted</string>

    <string name="dialog_title_decryption_note">Decryption Note</string>
    <string name="dialog_message_decryption_note">
       Note is encrypted, Please Import Key to continue
    </string>
    <string name="dialog_title_not_save_encryption_key">Remove Encryption Key</string>
    <string name="dialog_message_not_save_encryption_key">No keys are stored, your notes will not be encrypted</string>
    <string name="dialog_title_new_encryption_key">New Encryption Key</string>
    <string name="dialog_message_new_encryption_key">New Encryption Key found, do you want to use it.</string>

    <!--  Radio Title  -->
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_default_system">Default System</string>
    <string name="theme_auto_battery">Set by Battery Saver</string>

    <!--  Dialog button text  -->
    <!--  Button positive  -->
    <string name="dialog_positive_text_go_to_settings">Go to settings</string>

    <!--  About  -->
    <string name="about_title_encryption_text">IMPORTANT</string>
    <string name="about_description_encryption_text">When you provide a key, the contents of your notes will be encrypted.
        For security reasons We recommend that you use the key generate key,
            although we give you access to write your own key.
        You need to export the key for you to use again to decrypt the note.
    </string>

    <!--  Preferences title  -->
    <string name="preferences_summary_developer_info">Show information such name, contact and etc.</string>
    <string name="preferences_title_theme">Theme</string>
    <string name="preferences_title_display_options">Display Options</string>
    <string name="preferences_title_about">About</string>

    <!--  Filter title  -->
    <string name="filter_title_all_note">All Note</string>
    <string name="filter_title_pin_note">Pin Note</string>

    <string name="title_fragment_add_edit_note">New Note</string>
    <string name="title_fragment_note_detail">Note Details</string>
    <string name="title_activity_settings">Settings</string>

    <!--  Menu title  -->
    <string name="menu_group_title_options">Options</string>

    <string name="menu_title_encryption_text">Encryption Text</string>
    <string name="menu_title_encryption_text_active">Encryption Text Active</string>
    <string name="menu_title_delete_note">Delete</string>
    <string name="menu_title_decryption_note">Decryption Note (read only)</string>
    <string name="menu_title_edit_note">Edit Note</string>
    <string name="menu_title_menu">Menu</string>
    <string name="menu_title_pin">Pin</string>
    <string name="menu_title_unpin">Unpin</string>

    <!--  Permission title and description  -->
    <!--  title  -->
    <string name="permission_title_storage">Storage Permission Required</string>
    <!--  description  -->
    <string name="permission_description_storage">To can using this feature, apps need access internal storage</string>

    <!--  Content description  -->
    <string name="content_description_empty_note">Empty image</string>
    <string name="content_description_search_note">Search Note</string>

    <!--  Developer Info  -->
    <string name="developer_info">Developer Info</string>
    <string name="developer_title_name">Name</string>
    <string name="developer_name">Muhammad Iqbal Afandi</string>
    <string name="developer_title_email">Email</string>
    <string name="developer_email">muhammadiqbalafandi30@gmail.com</string>
    <string name="developer_title_github">Github</string>
    <string name="developer_summary_github">Im very happy if your join to develop this app.</string>
</resources>